<resources>
    <string name="channel_id" translatable="false">fanschat_channel_id</string>
    <string name="channel_name" translatable="false">General notifications</string>
    <string name="notification_channel_id" translatable="false">default</string>
    <string name="wall">Wall</string>
    <string name="news">News</string>
    <string name="rumours">Web Rumors</string>
    <string name="social">Social</string>
    <string name="stats">Stats</string>
    <string name="shop">Official Store</string>
    <string name="chat">Chat</string>
    <string name="video_chat">Video Chat</string>
    <string name="radio">Club Radio</string>
    <string name="tv">Club TV</string>
    <string name="tickets">Tickets</string>
    <string name="store">Official Store</string>
    <string name="quiz">Quiz</string>
    <string name="fantasy">Fantasy</string>
    <string name="calendar">Calendar</string>
    <string-array name="menu_navigation">
        <item>@string/wall</item>
        <item>@string/chat</item>
        <item>@string/news</item>
        <item>@string/social</item>
        <item>@string/stats</item>
        <item>@string/rumours</item>
        <item>@string/radio</item>
        <item>@string/tickets</item>
        <item>@string/shop</item>
        <item>@string/tv</item>
        <item>@string/video_chat</item>
        <item>@string/calendar</item>
    </string-array>
    <string name="slogan">Bringing fans together</string>
    <string name="access_full">To access full features…</string>
    <string name="access_full_mtn">Join us now to access VIP events and exclusive access too…</string>
    <string name="join_sign_in">Join Now / Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="join">Join Now</string>
    <string name="login_facebook">Login with <b>Facebook</b></string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="nickname">Nickname</string>
    <string name="phone">Phone</string>
    <string name="error">Error</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_failed">Registration error</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password_reset">Reset Password</string>
    <string name="reset_check_email">Please check your email for password reset options.</string>
    <string name="email_enter_valid">Please enter a valid email address!</string>
    <string name="policy_prompt"><![CDATA[By signing up, you agree to the <b>Privacy Policy.</b>]]></string>
    <string name="required_email">Please fill in your email.</string>
    <string name="required_password">Please fill in your password.</string>
    <string name="required_first_name">Please fill in your first name.</string>
    <string name="required_last_name">Please fill in your last name.</string>
    <string name="required_nickname">Please fill in your nickname.</string>
    <string name="required_phone">Please fill in your phone number.</string>
    <string name="required_credentials">Please enter valid credentials</string>
    <string name="password_try_again">Please re-enter your password and try again</string>
    <string name="login_slider_chat">You can chat with friends, create groups and even connect with your favourite players!</string>
    <string name="logout_from_app">This will log you out of the app!</string>
    <string name="reset_app">This action will reload the application.</string>
    <string name="error_username_taken">Registration error - email is already registered, please login instead.</string>
    <string name="facebook_error">Your public profile could not be received. Please try again!</string>
    <string name="ok">OK</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="warning">Warning</string>
    <string name="uploading">Uploading…</string>
    <string name="no_connection">No Connection</string>
    <string name="internet_needed">You need to be connected to the internet to do this</string>
    <string name="waiting_for_internet">Waiting for active internet connection…</string>
    <string name="go_to_profile">Go to Profile ></string>
    <string name="profile">Profile</string>
    <string name="contact_info">Contact info</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="chosen_language">Chosen language</string>
    <string name="location">Location</string>
    <string name="subscribed_since">Subscribed since</string>
    <string name="auto_translation">Automatic translation</string>
    <string name="notify_wall">Wall notifications</string>
    <string name="notify_news">News notifications</string>
    <string name="notify_rumours">Rumors notifications</string>
    <string name="notify_social">Social notifications</string>
    <string name="edit_profile">Edit Your Profile</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="done">Done</string>
    <string name="caps_level">Caps level</string>
    <string name="days_using">Days using SSK</string>
    <string name="wall_posts">Wall posts</string>
    <string name="videos_watched">Videos watched</string>
    <string name="matches_home">Matches (home)</string>
    <string name="matches_away">Matches (away)</string>
    <string name="likes_received">Likes received</string>
    <string name="comments_made">Comments made</string>
    <string name="language">Language</string>
    <string name="you_have">You have</string>
    <string name="caps">Caps</string>
    <string name="language_current">English</string>
    <string-array name="languages" translatable="false">
        <item>বাংলা</item>
        <item>汉语</item>
        <item>English</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>Bahasa Indonesia</item>
        <item>Italiano</item>
        <item>Polski</item>
        <item>Português</item>
        <item>Русский</item>
        <item>Español</item>
        <item>العَرَبِيَّة</item>
    </string-array>
    <string name="friend_profile">Friend Profile</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="follows_you">Follows you</string>
    <string name="user_profile">User Profile</string>
    <string name="friends_title">Your Friends</string>
    <string name="friends_search">Search your friends</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="offline">Offline</string>
    <string name="friend_request_pending">Friend Request Pending</string>
    <string name="enter_friend_name_invite">Enter friend\'s email address to invite.</string>
    <string name="remove_friend">Unfriend</string>
    <string name="friend_request_send">Send Friend Request</string>
    <string name="friend_unfollow">Unfollow</string>
    <string name="friend_follow">Follow</string>
    <string name="posts">Pinned</string>
    <string name="comments">Comments</string>
    <string name="friends">Friends</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="member_info">Member info</string>
    <string name="requested_on">Requested </string>
    <string name="you">You</string>
    <string name="add_friend">Add a friend</string>
    <string name="invite_friend">Invite a friend</string>
    <string name="add_friend_hint">Enter your friend\'s name, email or phone number in the search field.</string>
    <string name="save">Save</string>
    <string name="invite">Invite</string>
    <string name="follow_more">Follow More</string>
    <string name="friends_following_you">Friends following you:</string>
    <string name="find">Find</string>
    <string name="requests">Requests</string>
    <string name="official_accounts">Official Accounts</string>
    <string name="no_results">No results</string>
    <string name="user">User</string>
    <string name="more">More</string>
    <string name="friend_you_and">Friend you and </string>
    <string name="have_in_common"> have in common</string>
    <string name="members">Members</string>
    <string name="leave">Leave</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="chat_confirm_leave">Leave this chat?</string>
    <string name="chat_confirm_delete">This will permanently delete this chat; are you sure?</string>
    <string name="photo_or_video">Take photo or record video?</string>
    <string name="chat_image">Image</string>
    <string name="add_attachment">Add attachment</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="from_camera">From camera</string>
    <string name="record_audio">Record audio</string>
    <string name="record_video">Record video</string>
    <string name="chat_hold">Hold down to record</string>
    <string name="chat_recording_stop">Recording stopped</string>
    <string name="no_message_text">No one has started chatting yet! Why not be the first?</string>
    <string name="chat_public">This chat is public</string>
    <string name="chat_private">This chat is private</string>
    <string name="chat_create">Create Chat</string>
    <string name="chat_edit">Edit Chat</string>
    <string name="chat_join">Join Chat</string>
    <string name="single_user_is_typing">%1$s! is typing…</string>
    <string name="multiple_users_are_typing">Multiple users are typing…</string>
    <string name="alerts_on">Alerts-ON</string>
    <string name="alerts_off">Alerts-OFF</string>
    <string name="chat_with_friends_login">Chat with friends</string>
    <string name="authorize_description">You need to sign in\nin order to use all features\nof the app</string>
    <string name="friends_in_chat">Friends in Chat</string>
    <string name="friend_in_chat">1 Friend in Chat</string>
    <string name="chats">Chats</string>
    <string name="chats_public">Public chats</string>
    <string name="search">Search</string>
    <string name="message_hint">Enter your message here…</string>
    <string name="chat_friends_add">Add friends to %s</string>
    <string name="chat_name">Chat name</string>
    <string name="chat_give_name">Enter a name for your chat</string>
    <string name="chat_rename">Rename your chat</string>
    <string name="add_friends_to_chat">Add friends to chat</string>
    <string name="friend_chats">Public Chats your friends are in</string>
    <string name="is_in"> is in: </string>
    <string name="video_chat_promo_1">Win the match with your <font color="#c3ff01">friends</font></string>
    <string name="video_chat_promo_2">Video chat allows you to call up to 3 friends for a group video chat, so you can experience the action with the people you love wherever you are!</string>
    <string name="call_start">Start Call</string>
    <string name="call_starting">Starting New Call</string>
    <string name="call_add_member">Add To Call</string>
    <string name="accept_call">Accept the call?</string>
    <string name="call_receive">Receiving a call from</string>
    <string name="video_chat_max">Sorry, you can only video call with a maximum of 3 friends, and this call is already full!</string>
    <string name="video_chats">Video chats</string>
    <string name="friends_in_video_chat">Friends in Video Chat</string>
    <string name="friend_in_video_chat">1 Friend in Video Chat</string>
    <string name="no_users_selected">No users selected!</string>
    <string name="read_more">Read more &gt;</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="translate">Translate</string>
    <string name="menu" translatable="false">Menu</string>
</resources>