<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/margin_16"
    android:orientation="horizontal"
    android:paddingStart="@dimen/margin_20"
    android:paddingEnd="@dimen/margin_10"
    tools:showIn="@layout/fragment_profile">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/caps_level" />

            <TextView
                android:id="@+id/caps"
                style="@style/ProfileStatsValue"
                tools:text="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/friends" />

            <TextView
                android:id="@+id/friends"
                style="@style/ProfileStatsValue"
                tools:text="46" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:visibility="gone">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/followers"
                style="@style/ProfileStatsValue"
                tools:text="58" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/videos_watched" />

            <TextView
                android:id="@+id/videosWatched"
                style="@style/ProfileStatsValue"
                tools:text="7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/video_chats" />

            <TextView
                android:id="@+id/videoChats"
                style="@style/ProfileStatsValue"
                tools:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/matches_home" />

            <TextView
                android:id="@+id/matchesHome"
                style="@style/ProfileStatsValue"
                tools:text="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/likes_received" />

            <TextView
                android:id="@+id/likes"
                style="@style/ProfileStatsValue"
                tools:text="9" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/days_using" />

            <TextView
                android:id="@+id/daysUsing"
                style="@style/ProfileStatsValue"
                tools:text="186" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:visibility="gone">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/following" />

            <TextView
                android:id="@+id/following"
                style="@style/ProfileStatsValue"
                tools:text="32" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/wall_posts" />

            <TextView
                android:id="@+id/posts"
                style="@style/ProfileStatsValue"
                tools:text="9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/chats" />

            <TextView
                android:id="@+id/chats"
                style="@style/ProfileStatsValue"
                tools:text="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/chats_public" />

            <TextView
                android:id="@+id/chatsPublic"
                style="@style/ProfileStatsValue"
                tools:text="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/matches_away" />

            <TextView
                android:id="@+id/matchesAway"
                style="@style/ProfileStatsValue"
                tools:text="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                style="@style/ProfileStatsLabel"
                android:text="@string/comments_made" />

            <TextView
                android:id="@+id/comments"
                style="@style/ProfileStatsValue"
                tools:text="13" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
            