<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/padding_12"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_detail">

    <TextView
        android:id="@+id/readMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:minWidth="0dp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/read_more"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:fontFamily="sans-serif-light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minWidth="0dp"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/translate"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/reportPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minWidth="0dp"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/report"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:fontFamily="sans-serif-light"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minWidth="0dp"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:fontFamily="sans-serif-light"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvSave"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/button_login_home"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:minWidth="0dp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minWidth="0dp"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:fontFamily="sans-serif-light"
            tools:visibility="visible" />

    </LinearLayout>
</LinearLayout>

        