<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_height"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:rotationY="@integer/view_rotation"
            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_18"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e9eaee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/bg_tab"
            app:tabIndicatorColor="@null"
            app:tabIndicatorHeight="0dp"
            app:tabSelectedTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/friends" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/find" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/requests" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs" />

        <LinearLayout
            android:id="@+id/friendsBadgeSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <LinearLayout
                android:id="@+id/friendsBadgeContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingStart="82dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/friendsBadge"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:background="@drawable/notification_badge_dot"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>